<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sunnybg"
        android:padding="16dp"
        tools:context=".WeatherActivity">


    <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/searchviewshape"
            android:iconifiedByDefault="false"
            android:queryHint="Search for city"
            android:searchIcon="@drawable/ic_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/outline_location_on_24"
            android:drawablePadding="15dp"
            android:text=""
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView" />
    <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLocation"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/sunny" />


    <TextView
            android:id="@+id/tvPresentDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="84dp"
            android:layout_marginTop="16dp"
            android:text="Today"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/lottieAnimationView"
            app:layout_constraintTop_toBottomOf="@+id/tvLocation" />


    <TextView
            android:id="@+id/tvCityTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="°C"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/tvPresentDay"
            app:layout_constraintStart_toStartOf="@+id/tvPresentDay"
            app:layout_constraintTop_toBottomOf="@+id/tvPresentDay" />

    <TextView
            android:id="@+id/tvSunny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/sunny"
            android:textAllCaps="true"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="@+id/lottieAnimationView"
            app:layout_constraintHorizontal_bias="0.338"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView" />

    <TextView
            android:id="@+id/tvMinTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="°C"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/lottieAnimationView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.349"
            app:layout_constraintStart_toEndOf="@+id/lottieAnimationView" />

    <TextView
            android:id="@+id/tvMaxTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="°C"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/tvMinTemp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/tvMinTemp"
            app:layout_constraintTop_toBottomOf="@+id/tvMinTemp" />

    <TextView
            android:id="@+id/tvDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/tuesday"
            android:textAllCaps="true"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSunny" />

    <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/_24_02_2024"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/tvDay"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="@+id/tvDay"
            app:layout_constraintTop_toBottomOf="@+id/tvDay" />

    <FrameLayout
            android:id="@+id/flContainer"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDate">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <androidx.constraintlayout.helper.widget.Flow
                    android:id="@+id/flow"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    app:constraint_referenced_ids="linearLayoutHumidity,linearLayoutWind,linearLayoutRain,linearLayoutSunrise,linearLayoutSunset,linearLayoutSea"
                    app:flow_maxElementsWrap="3"
                    app:flow_wrapMode="chain"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/linearLayoutHumidity"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                    android:id="@+id/linearLayoutHumidity"
                    android:layout_width="88dp"
                    android:layout_height="80dp"
                    android:background="@drawable/background_shape"
                    android:orientation="vertical"
                    android:padding="2dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <ImageView
                        android:id="@+id/IvHumidityLevel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="2dp"
                        android:src="@drawable/ic_humidity" />

                <TextView
                        android:id="@+id/tvHumidityLevel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="2dp"
                        android:text="@string/_70" />

                <TextView
                        android:id="@+id/tvHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="2dp"
                        android:text="@string/humidity" />

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/linearLayoutWind"
                    android:layout_width="88dp"
                    android:layout_height="80dp"
                    android:background="@drawable/background_shape"
                    android:orientation="vertical"
                    android:padding="2dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <ImageView
                        android:id="@+id/IvWind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="4dp"
                        android:src="@drawable/ic_wind" />

                <TextView
                        android:id="@+id/tvWindLevel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:text="@string/_2_24" />

                <TextView
                        android:id="@+id/tvWind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/wind" />

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/linearLayoutRain"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/background_shape"
                    android:orientation="vertical"
                    android:padding="2dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <ImageView
                        android:id="@+id/IvRain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="2dp"
                        android:src="@drawable/ic_rain" />

                <TextView
                        android:id="@+id/tvRain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="2dp"
                        android:text="@string/rain" />

                <TextView
                        android:id="@+id/tvRainCondition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="2dp"
                        android:text="@string/conditions" />

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/linearLayoutSunrise"
                    android:layout_width="88dp"
                    android:layout_height="80dp"
                    android:background="@drawable/background_shape"
                    android:orientation="vertical"
                    android:padding="2dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <ImageView
                        android:id="@+id/IvSunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="2dp"
                        android:src="@drawable/ic_sunrise" />

                <TextView
                        android:id="@+id/tvSunriseLevel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="2dp"
                        android:text="@string/_10054" />

                <TextView
                        android:id="@+id/tvSunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="2dp"
                        android:text="@string/sunrise" />

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/linearLayoutSunset"
                    android:layout_width="88dp"
                    android:layout_height="80dp"
                    android:background="@drawable/background_shape"
                    android:orientation="vertical"
                    android:padding="2dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <ImageView
                        android:id="@+id/IvSunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="2dp"
                        android:src="@drawable/ic_sunset" />

                <TextView
                        android:id="@+id/tvSunsetLevel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="2dp"
                        android:text="@string/_10540" />

                <TextView
                        android:id="@+id/tvSunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="2dp"
                        android:text="@string/sunset" />

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/linearLayoutSea"
                    android:layout_width="88dp"
                    android:layout_height="80dp"
                    android:background="@drawable/background_shape"
                    android:orientation="vertical"
                    android:padding="2dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <ImageView
                        android:id="@+id/seaIv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:src="@drawable/ic_sea" />

                <TextView
                        android:id="@+id/tvseaLevel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:text="@string/_100" />

                <TextView
                        android:id="@+id/tvSea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="2dp"
                        android:text="@string/sea" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>